Fixed the alignment table

--- a/public/css/npc-create-page.css
+++ b/public/css/npc-create-page.css
@@ -260,8 +260,6 @@ html {
         display: flex;
         align-items: center;
         justify-content: center;
-        max-height: 40px;
-        max-width: 40px;
       }
 
       .neutral {
@@ -270,8 +268,6 @@ html {
         display: flex;
         align-items: center;
         justify-content: center;
-        max-height: 40px;
-        max-width: 40px;
       }
 
       .evil {
@@ -280,8 +276,6 @@ html {
         display: flex;
         align-items: center;
         justify-content: center;
-        max-height: 40px;
-        max-width: 40px;
       }
 
       .goodGrid {
